--- a/src/App.css
+++ b/src/App.css
@@ -1703,13 +1703,13 @@
 
 @keyframes hobbyScroll {
   0% {
-    transform: translateX(0%);
+    transform: translate3d(0%, 0, 0);
   }
   90% {
-    transform: translateX(-155%);
+    transform: translate3d(-155%, 0, 0);
   }
   100% {
-    transform: translateX(-155%);
+    transform: translate3d(-155%, 0, 0);
   }
 }
 
@@ -1780,6 +1780,7 @@
     border: 4px solid var(--neon-color);
   }
 }
+
 @keyframes neonIgniteBottomOnly {
   0% {
     box-shadow: none;
@@ -1866,41 +1867,6 @@
     box-shadow: 0 0 calc(var(--neon-flicker-shadow, 10px) / 2) var(--neon-color),
       inset 0 0 calc(var(--neon-flicker-inset, 15px) / 3)
         var(--neon-color-opacity);
-  }
-}
-
-@keyframes sway {
-  0% {
-    transform: scale(1.3) rotate(0deg) translateX(0px);
-  }
-  /* First swing - left and UP */
-  12% {
-    transform: scale(1.2) rotate(-4deg) translateX(30px);
-  }
-  /* First swing - right and UP */
-  25% {
-    transform: scale(1.2) rotate(4deg) translateX(-30px);
-  }
-  /* Second swing - slightly smaller */
-  37% {
-    transform: scale(1.2) rotate(-3deg) translateX(20px);
-  }
-  50% {
-    transform: scale(1.2) rotate(3deg) translateX(-20px);
-  }
-  /* Third swing - even smaller */
-  62% {
-    transform: scale(1.2) rotate(-2deg) translateX(10px);
-  }
-  75% {
-    transform: scale(1.2) rotate(2deg) translateX(-10px);
-  }
-  87% {
-    transform: scale(1.2) rotate(-0.5deg) translateX(5px);
-  }
-  /* Come to rest */
-  100% {
-    transform: scale(1.2) rotate(0deg) translateX(0px);
   }
 }
 
