--- a/src/App.css
+++ b/src/App.css
@@ -1176,9 +1176,8 @@
   padding: 0;
   display: inline-flex;
   align-items: center;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
-  position: relative;
 }
 
 .cyber-resume .box-11 {
@@ -1214,7 +1213,6 @@
   padding: 0;
   width: max-content;
   max-width: none;
-  /* min-width: 100%; */
   animation: hobbyScroll 35s linear infinite;
 }
 
