--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@
   --space-12: 3rem; /* 48px */
   --space-16: 4rem; /* 64px */
   --space-24: 6rem; /* 96px */
+  --space-32: 8rem; /* 128px */
 
   /* border & radius */
   --radius-sm: 4px;
