--- a/src/App.css
+++ b/src/App.css
@@ -402,14 +402,9 @@
   width: 100%;
   height: 100%;
   grid-template-columns: repeat(4, 1fr);
-  /* grid-template-columns: repeat(49, 1fr); */
-  grid-template-rows: repeat(160, 16px);
-  /* grid-template-rows: repeat(64, 1fr); */
-  /* grid-column: 1/-1;
-  grid-row: 1/-1; */
+  grid-template-rows: repeat(165, 16px);
   max-width: 600px;
   min-width: 375px;
-  /* max-height: 96vh; */
   font-family: var(--font-mono);
   font-weight: 600;
 }
@@ -471,7 +466,7 @@
   /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
   .cyber-resume {
     max-width: 750px;
-    grid-template-rows: repeat(153, 16px);
+    grid-template-rows: repeat(155, 16px);
   }
 }
 
@@ -488,14 +483,14 @@
 
 .cyber-resume .box-2 {
   grid-column: 1 / -1;
-  grid-row: 13 / span 20;
+  grid-row: 14 / span 20;
   animation-delay: 3s;
 }
 .cyber-resume .box-3,
 .cyber-resume .box-4,
 .cyber-resume .box-5 {
   grid-column: 1 / -1;
-  grid-row: 37 / span 20;
+  grid-row: 38 / span 20;
   animation-delay: 2s;
   margin: 0;
   padding: 0.1em;
@@ -504,7 +499,7 @@
 .cyber-resume .box-6,
 .cyber-resume .box-7 {
   grid-column: 1 / -1;
-  grid-row: 61 / span 20;
+  grid-row: 62 / span 20;
   animation-delay: 2s;
   margin: 0;
   padding: 0.1em;
@@ -512,25 +507,25 @@
 }
 .cyber-resume .box-8 {
   grid-column: 1 / -1;
-  grid-row: 82 / span 17;
+  grid-row: 84 / span 17;
   animation-delay: 3.6s;
   margin: 0;
   overflow: visible;
 }
 .cyber-resume .box-9 {
   grid-column: 1 / -1;
-  grid-row: 100 / span 25;
+  grid-row: 103 / span 25;
   animation-delay: 3.6s;
   overflow: scroll;
 }
 .cyber-resume .box-10 {
   grid-column: 1 / -1;
-  grid-row: 126 / span 27;
+  grid-row: 130 / span 27;
   animation-delay: 3.6s;
 }
 .cyber-resume .box-11 {
   grid-column: 1 / -1;
-  grid-row: 154 / span 6;
+  grid-row: 159 / span 6;
   animation-delay: 2s;
   overflow: hidden;
 }
@@ -555,21 +550,21 @@
     justify-self: center;
   }
   .cyber-resume .box-8 {
-    grid-row: 82 / span 35;
+    grid-row: 84 / span 35;
     overflow: hidden;
   }
   .cyber-resume .box-9 {
     grid-column: 1 / 3;
-    grid-row: 119 / span 26;
+    grid-row: 121 / span 26;
     margin: 0 0.5rem;
   }
   .cyber-resume .box-10 {
     grid-column: 3 / -1;
-    grid-row: 119 / span 26;
+    grid-row: 121 / span 26;
     margin: 0 0.5rem;
   }
   .cyber-resume .box-11 {
-    grid-row: 147 / span 6;
+    grid-row: 149 / span 6;
   }
 }
 
@@ -778,22 +773,21 @@
 
 .project-tabs-row {
   grid-column: 1 / -1;
-  grid-row: 36 / span 3;
+  grid-row: 37 / span 3;
   display: flex;
   margin-bottom: 0;
   position: relative;
-  transform: translateY(-8px);
+  transform: translateY(-10px);
   z-index: 1;
 }
 
 .experience-tabs-row {
   grid-column: 1 / -1;
-  grid-row: 60 / span 3;
+  grid-row: 61 / span 3;
   display: flex;
-  gap: -1px;
   margin-bottom: 0;
   position: relative;
-  transform: translateY(-8px);
+  transform: translateY(-10px);
   z-index: 1;
 }
 
@@ -882,6 +876,43 @@
   margin: 0;
   padding: 0.75em 0 0 1em;
   font-size: var(--text-sm);
+}
+
+@media (min-width: 768px) {
+  /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+  .project-tabs-row {
+  transform: translateY(-10px) translateX(80px);
+}
+
+.experience-tabs-row {
+  transform: translateY(-10px) translateX(80px);
+}
+
+.folder-tab {
+  margin-right: -2%;
+}
+  
+  .cyber-resume .projects-section,
+  .cyber-resume .experience-section {
+    grid-template-columns: 3em 1fr;
+  }
+  .cyber-resume .projects-section h3,
+  .cyber-resume .experience-section h3 {
+    font-size: var(--text-2xl);
+  }
+  .cyber-resume .projects-section .section-content h4,
+  .cyber-resume .experience-section .section-content h4 {
+    font-size: var(--text-xl);
+  }
+  .cyber-resume .projects-section .section-content p,
+  .cyber-resume .experience-section .section-content p {
+    font-size: var(--text-base);
+  }
+  .cyber-resume .projects-section .section-content ul,
+  .cyber-resume .experience-section .section-content ul {
+    font-size: var(--text-base);
+    line-height: var(--space-6);
+  }
 }
 
 /* ========================================= Projects and Experience =========================================*/
