--- a/src/App.css
+++ b/src/App.css
@@ -757,15 +757,17 @@
 
 @media (min-width: 768px) {
   /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+
   .cyber-resume .summary-section h3 {
-  font-size: var(--text-2xl);
-  padding: 20px 0 5px 0;
-}
-.cyber-resume .summary-section p {
-  font-size: var(--text-xs);
-  padding: var(--space-4);
-  line-height: var(--space-5);
-}
+    font-size: var(--text-2xl);
+    padding: 20px 0 5px 0;
+  }
+
+  .cyber-resume .summary-section p {
+    font-size: var(--text-xs);
+    padding: var(--space-4);
+    line-height: var(--space-5);
+  }
 }
 
 /* ================================================= Summary =================================================*/
@@ -881,33 +883,37 @@
 @media (min-width: 768px) {
   /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
   .project-tabs-row {
-  transform: translateY(-10px) translateX(80px);
-}
+    transform: translateY(-10px) translateX(80px);
+  }
 
-.experience-tabs-row {
-  transform: translateY(-10px) translateX(80px);
-}
+  .experience-tabs-row {
+    transform: translateY(-10px) translateX(80px);
+  }
 
-.folder-tab {
-  margin-right: -2%;
-}
-  
+  .folder-tab {
+    margin-right: -2%;
+  }
+
   .cyber-resume .projects-section,
   .cyber-resume .experience-section {
     grid-template-columns: 3em 1fr;
   }
+
   .cyber-resume .projects-section h3,
   .cyber-resume .experience-section h3 {
     font-size: var(--text-2xl);
   }
+
   .cyber-resume .projects-section .section-content h4,
   .cyber-resume .experience-section .section-content h4 {
     font-size: var(--text-xl);
   }
+
   .cyber-resume .projects-section .section-content p,
   .cyber-resume .experience-section .section-content p {
     font-size: var(--text-base);
   }
+
   .cyber-resume .projects-section .section-content ul,
   .cyber-resume .experience-section .section-content ul {
     font-size: var(--text-base);
@@ -941,15 +947,12 @@
   padding: 0;
   border-right: var(--color-neon-primary) solid 1px;
   border-left: var(--color-neon-primary) solid 1px;
-  /* width: 677px; */
 }
 
 .cyber-resume .box-8 .holo-map-container .bg-layer {
   position: absolute;
   top: 0;
   left: 0;
-  /* aspect-ratio: 677 / 500; */
-
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -1072,12 +1075,12 @@
 /* SFU */
 .map-node.node-3 {
   top: 47.5%;
-  left: 39.7%;
+  left: 40%;
 }
 /* LHL */
 .map-node.node-4 {
   top: 16%;
-  left: 66%;
+  left: 66.3%;
 }
 /* Tree Planting 1 */
 .map-node.node-5 {
@@ -1092,17 +1095,17 @@
 /* Bartender */
 .map-node.node-7 {
   top: 4%;
-  left: 25%;
+  left: 25.2%;
 }
 /* BCWS1 */
 .map-node.node-8 {
   top: 35.5%;
-  left: 39.7%;
+  left: 40%;
 }
 /* BCWS2 */
 .map-node.node-9 {
   top: 16%;
-  left: 39.7%;
+  left: 40%;
 }
 /* BCWS3 */
 .map-node.node-10 {
@@ -1127,7 +1130,7 @@
 /* Hiring Team */
 .map-node.node-14 {
   top: 23%;
-  left: 25%;
+  left: 25.2%;
 }
 /* Ops Meet */
 .map-node.node-15 {
@@ -1141,6 +1144,17 @@
 }
 
 /*===== Node Logic =====*/
+
+@media (min-width: 768px) {
+  /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+
+  .map-node {
+  width: 24px;
+  height: 24px;
+}
+
+
+}
 /* ================================================= Education ================================================*/
 /* ============================================= Technical Skills ============================================*/
 
