--- a/src/App.css
+++ b/src/App.css
@@ -470,6 +470,14 @@
   }
 }
 
+@media (min-width: 1024px) {
+  /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+  .cyber-resume {
+    max-width: 1000px;
+    grid-template-rows: repeat(136, 16px);
+  }
+}
+
 /* ======================================== General / Default Styles ========================================*/
 /* ================================================ Box Grid ================================================*/
 
@@ -511,6 +519,8 @@
   animation-delay: 3.6s;
   margin: 0;
   overflow: visible;
+  max-width: fit-content;
+  justify-self: center;
 }
 .cyber-resume .box-9 {
   grid-column: 1 / -1;
@@ -551,7 +561,8 @@
   }
   .cyber-resume .box-8 {
     grid-row: 84 / span 35;
-    overflow: hidden;
+    max-width: fit-content;
+    justify-self: center;
   }
   .cyber-resume .box-9 {
     grid-column: 1 / 3;
@@ -565,6 +576,44 @@
   }
   .cyber-resume .box-11 {
     grid-row: 149 / span 6;
+  }
+}
+
+@media (min-width: 1024px) {
+  .cyber-resume .box-1 {
+    max-width: 900px;
+    justify-self: center;
+  }
+
+  .cyber-resume .box-3,
+  .cyber-resume .box-4,
+  .cyber-resume .box-5 {
+    grid-column: 1 / 3;
+    grid-row: 38 / span 26;
+    margin-right: 0.5rem;
+  }
+
+  .cyber-resume .box-6,
+  .cyber-resume .box-7 {
+    max-width: 900px;
+    grid-column: 3 / -1;
+    grid-row: 38 / span 26;
+    margin-left: 0.5rem;
+  }
+
+  .cyber-resume .box-8 {
+    grid-row: 66 / span 35;
+    max-width: fit-content;
+    justify-self: center;
+  }
+  .cyber-resume .box-9 {
+    grid-row: 103 / span 26;
+  }
+  .cyber-resume .box-10 {
+    grid-row: 103 / span 26;
+  }
+  .cyber-resume .box-11 {
+    grid-row: 131 / span 6;
   }
 }
 
@@ -919,6 +968,24 @@
     font-size: var(--text-base);
     line-height: var(--space-6);
   }
+
+}
+
+@media (min-width: 1024px) {
+  .project-tabs-row {
+    transform: translateY(-10px) translateX(20px);
+  }
+
+  .experience-tabs-row {
+    grid-column: 3 / -1;
+    grid-row: 37 / span 3;
+    transform: translateY(-10px) translateX(calc(20px + 0.5em));
+  }
+
+  .folder-tab {
+    margin-right: -2%;
+  }
+
 }
 
 /* ========================================= Projects and Experience =========================================*/
@@ -1551,8 +1618,8 @@
 @media (min-width: 768px) {
   /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
   .cyber-resume .box-12 {
-  transform: translateX(50%) translateY(-6%) scale(0.75) rotate(180deg);
-}
+    transform: translateX(50%) translateY(-6%) scale(0.75) rotate(180deg);
+  }
 }
 
 /*================================================== Battery ==================================================*/
