--- a/src/App.css
+++ b/src/App.css
@@ -488,7 +488,7 @@
 @media (min-width: 1440px) {
   .cyber-resume {
     max-width: 1400px;
-    grid-template-rows: repeat(60, 16px);
+    grid-template-rows: repeat(62, 16px);
     grid-template-columns: repeat(16, 1fr);
   }
 }
@@ -636,10 +636,12 @@
   .cyber-resume .box-1 {
     width: 1000px;
     max-width: 1000px;
+    grid-row: 2 / span 8;
   }
 
   .cyber-resume .box-2 {
-    grid-column: 6 / span 6;
+    grid-column: 7 / span 6;
+    grid-row: 12 / span 18;
     max-width: none;
     margin: 0 var(--space-8);
   }
@@ -647,39 +649,41 @@
   .cyber-resume .box-3,
   .cyber-resume .box-4,
   .cyber-resume .box-5 {
-    grid-column: 1 / 6;
-    grid-row: 17 / span 21;
+    grid-column: 1 / 7;
+    grid-row: 14 / span 22;
     margin: 0;
   }
 
   .cyber-resume .box-6,
   .cyber-resume .box-7 {
-    grid-column: 1 / 6;
-    grid-row: 41 / span 21;
+    grid-column: 1 / 7;
+    grid-row: 40 / span 22;
     margin: 0;
   }
 
   .cyber-resume .box-8 {
-    grid-row: 36 / span 22;
+    grid-column: 7 / span 6;
+    grid-row: 32 / span 22;
     max-width: fit-content;
     justify-self: center;
   }
 
   .cyber-resume .box-9 {
-    grid-row: 14 / span 27;
-    grid-column: 12 / span 3;
+    grid-row: 12 / span 23;
+    grid-column: 13 / span 4;
     margin: 0;
   }
 
   .cyber-resume .box-10 {
-    grid-row: 14 / span 27;
-    grid-column: 15 / span 2;
-    margin: 0 0 0 var(--space-8);
+    grid-row: 37 / span 25;
+    grid-column: 13 / span 4;
+    margin: 0;
   }
 
   .cyber-resume .box-11 {
-    grid-row: 43 / span 6;
-    grid-column: 12 / -1;
+    grid-row: 56 / span 6;
+    grid-column: 7 / span 6;
+    margin: 0 var(--space-8);
   }
 }
 
@@ -781,7 +785,6 @@
   animation: none;
   border: #262626 solid 10px;
   border-width: 10px 10px 30px 10px;
-  /* background: #000000; */
   border-radius: 2px;
   padding: 0;
 }
@@ -882,6 +885,21 @@
     font-size: var(--text-xs);
     padding: var(--space-4);
     line-height: var(--space-5);
+  }
+}
+
+@media (min-width: 1440px) {
+  /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+
+  .cyber-resume .summary-section h3 {
+    font-size: var(--text-xl);
+    padding: 5px 0 2px 0;
+  }
+
+  .cyber-resume .summary-section p {
+    font-size: var(--text-xs);
+    padding: var(--space-4);
+    line-height: var(--space-3);
   }
 }
 
@@ -1055,18 +1073,39 @@
 @media (min-width: 1440px) {
   .project-tabs-row {
     grid-column: 1 / 4;
-    grid-row: 16 / span 3;
+    grid-row: 13 / span 3;
     transform: translateY(-10px) translateX(20px);
   }
 
   .experience-tabs-row {
     grid-column: 1 / 4;
-    grid-row: 40 / span 3;
+    grid-row: 39 / span 3;
     transform: translateY(-10px) translateX(calc(20px + 0.5em));
   }
 
   .folder-tab {
     margin-right: -2%;
+  }
+
+  .cyber-resume .projects-section .section-content h4,
+  .cyber-resume .experience-section .section-content h4 {
+    font-size: var(--text-lg);
+  }
+
+  .cyber-resume .projects-section .section-content p,
+  .cyber-resume .experience-section .section-content p {
+    font-size: var(--text-sm);
+  }
+
+  .cyber-resume .projects-section .section-content ul,
+  .cyber-resume .experience-section .section-content ul {
+    font-size: var(--text-base);
+    line-height: var(--space-6);
+  }
+
+  .cyber-resume .projects-section .section-content li,
+  .cyber-resume .experience-section .section-content ul li {
+    line-height: 1.3rem;
   }
 }
 
@@ -1301,6 +1340,14 @@
     height: 24px;
   }
 }
+
+@media (min-width: 1440px) {
+  /* Tablet and up: switch to two columns, fixed aspect, or desktop styles */
+  .map-node {
+    width: 16px;
+    height: 16px;
+  }
+}
 /* ================================================= Education ================================================*/
 /* ============================================= Technical Skills ============================================*/
 
@@ -1350,6 +1397,20 @@
   font-size: var(--text-sm);
   margin: 0;
   padding: 0.35em 0;
+}
+
+@media (min-width: 1440px) {
+  .cyber-resume .technical-skills-section h4 {
+    font-size: var(--text-base);
+    margin: 0;
+    padding: 0.1em 0 0 0;
+  }
+
+  .cyber-resume .technical-skills-section p {
+    font-size: var(--text-xs);
+    margin: 0;
+    padding: 0.35em 0;
+  }
 }
 
 /*=============== Tech Skills ===============*/
@@ -1505,6 +1566,13 @@
   justify-content: flex-start;
   width: 100%;
   height: 100px;
+}
+
+@media (min-width: 1440px) {
+  .cyber-resume .soft-skills-section h3 {
+    margin-top: -17px;
+    margin-bottom: -5px;
+  }
 }
 
 /* =============================================== Soft Skills ===============================================*/
